@@ -11,16 +11,18 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.item.crafting.RecipeManager;
 import net.thejadeproject.ascension.AscensionCraft;
 import net.thejadeproject.ascension.blocks.ModBlocks;
 import net.thejadeproject.ascension.recipe.LowHumanPillCauldronRecipe;
 import net.thejadeproject.ascension.recipe.ModRecipes;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @JeiPlugin
 public class JEIModPlugin implements IModPlugin {
+
     private static IJeiRuntime jeiRuntime;
 
     @Override
@@ -30,27 +32,41 @@ public class JEIModPlugin implements IModPlugin {
 
     @Override
     public void registerCategories(IRecipeCategoryRegistration registration) {
-        registration.addRecipeCategories(new PillCauldronRecipeCategory(registration.getJeiHelpers().getGuiHelper()));
+        registration.addRecipeCategories(
+                new PillCauldronRecipeCategory(registration.getJeiHelpers().getGuiHelper()));
     }
 
     @Override
     public void registerRecipes(IRecipeRegistration registration) {
-        RecipeManager recipeManager = Minecraft.getInstance().level.getRecipeManager();
+        // JEI calls this after the client has joined a world and synced recipes.
+        // Defensive null-check: if called before level is available, register nothing.
+        Minecraft mc = Minecraft.getInstance();
+        if (mc.level == null || mc.level.getRecipeManager() == null) {
+            registration.addRecipes(PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE,
+                    Collections.emptyList());
+            return;
+        }
 
-        List<LowHumanPillCauldronRecipe> cauldronRecipes = recipeManager
-                .getAllRecipesFor(ModRecipes.CAULDRON_LOW_HUMAN_TYPE.get()).stream()
-                .map(RecipeHolder::value)
-                .toList();
+        try {
+            List<LowHumanPillCauldronRecipe> recipes = mc.level.getRecipeManager()
+                    .getAllRecipesFor(ModRecipes.CAULDRON_LOW_HUMAN_TYPE.get())
+                    .stream()
+                    .map(RecipeHolder::value)
+                    .collect(Collectors.toList());
 
-        registration.addRecipes(PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE, cauldronRecipes);
+            registration.addRecipes(PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE, recipes);
+        } catch (Exception e) {
+            AscensionCraft.LOGGER.warn("JEI: Failed to load pill cauldron recipes: {}", e.getMessage());
+            registration.addRecipes(PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE,
+                    Collections.emptyList());
+        }
     }
 
     @Override
     public void registerRecipeCatalysts(IRecipeCatalystRegistration registration) {
         registration.addRecipeCatalyst(
                 new ItemStack(ModBlocks.PILL_CAULDRON_HUMAN_LOW.get()),
-                PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE
-        );
+                PillCauldronRecipeCategory.CAULDRON_RECIPE_TYPE);
     }
 
     @Override
